# CatGPT

./: .gitignore  .gitmodules  LICENSE  README.md  export-onnx.sh  pyproject.toml  trt.sh
.cursor/: BUGBOT.md
.cursor/rules/: backwards-compatibility.mdc  jax-config-checklist.mdc  navigation.mdc  use-uv.mdc  web-search.mdc
.github/workflows/: ci.yaml
configs/: base.yaml  cpp_eval.yaml  jax_base.yaml  jax_eval.yaml  selfplay.yaml  sprt_tournament.yaml
cpp/: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
cpp/.cursor/rules/: chess-library.mdc
cpp/cmake/: GenVersion.cmake
cpp/src/: analyze_fen_main.cpp  catgpt_search_main.cpp  fractional_mcts_uci_main.cpp  libfork_smoke_test.cpp  lks_search_main.cpp  lks_uci_main.cpp  lockfree_map_bench.cpp  main.cpp  mcts_uci_main.cpp  policy_uci_main.cpp  puzzle_eval_main.cpp  pvs_uci_main.cpp  selfplay_main.cpp  syzygy.hpp  tokenizer.hpp  trt_benchmark.cpp  uci_main.cpp  value_uci_main.cpp
cpp/src/alpha_beta/: alpha_beta_main.cpp  alpha_beta_search.hpp  dummy_evaluator.hpp
cpp/src/dummy_search/: main.cpp
cpp/src/engine/: dummy_search.hpp  move_hash.hpp  network_file.hpp  nn_constants.hpp  numa_util.hpp  policy.hpp  policy_search.hpp  search_algo.hpp  search_limits.hpp  search_result.hpp  trt_evaluator.hpp  trt_runtime.hpp  value_search.hpp
cpp/src/engine/fractional_mcts/: config.hpp  node.hpp  search.hpp  search_stats.hpp
cpp/src/engine/fractional_mcts/v2/: board_secondary.hpp  inflight_table.hpp  tt_arena.hpp  tt_arena_bench.cpp  tt_arena_concurrent_bench.cpp  tt_arena_test.cpp
cpp/src/engine/lks/: compute_alloc_gym.cpp  compute_alloc_gym.hpp  compute_allocations.hpp  lks_search.hpp  lks_search_test.cpp  lks_throughput_bench.cpp
cpp/src/engine/mcts/: config.hpp  node.hpp  search.hpp  search_stats.hpp
cpp/src/engine/pvs/: config.hpp  node.hpp  search.hpp
cpp/src/lf/: async_semaphore.hpp
cpp/src/selfplay/: batch_evaluator.hpp  challenger_mcts.hpp  challenger_search.hpp  coroutine_mcts.hpp  coroutine_search.hpp  eval_request.hpp  game_slot.hpp  lc0_pool.hpp  puzzle_runner.hpp  selfplay_config.hpp  selfplay_runner.hpp  stockfish_pool.hpp  syzygy.hpp
cpp/src/selfplay/legacy/: batch_evaluator.hpp  eval_request.hpp
cpp/src/uci/: uci_handler.hpp
cpp/tests/: chess_lib_tests.cpp
scripts/: bag_to_fens.py  batch_convert_bagz.py  batch_convert_tars.py  build-cutechess.sh  build.sh  chessdb_annotations_to_bags.py  correct_chessdb_annotations.py  correct_lichess_annotations.py  download_syzygy_345.py  download_syzygy_6dtz.py  download_syzygy_6wdl.py  dump_bag_entries.py  evaluate.py  evaluate_cpp.py  evaluate_jax.py  export-onnx.sh  export_onnx.py  find_unsolved_puzzles.py  generate_move_values.py  inspect_bag.py  lichess_annotations_to_bags.py  lichess_puzzles_to_bag.py  pack_network.py  pipeline_bagz_to_training.py  pipeline_download_convert_upload.py  post_train_uncertainty.py  run_chessdb_annotation.sh  selfplay.py  sprt_tournament.py  train.py  train_jax.py  train_shards.py  trt-legacy.sh  trt.sh  trt_legacy.sh  validate_annotations.py  validate_chessdb_annotations.py
src/catgpt/: __init__.py  cli.py
src/catgpt/chess/: __init__.py  engine.py
src/catgpt/computer_use/: __init__.py  cli.py  computer.py  display.py  harness.py  safety.py
src/catgpt/core/: __init__.py
src/catgpt/core/chess/: __init__.py  engine.py  validation.py
src/catgpt/core/configs/: __init__.py  loader.py  schema.py
src/catgpt/core/data/: __init__.py  types.py
src/catgpt/core/data/grain/: __init__.py  bagz.py  bagz_to_bag.py  coders.py  tar_to_bag.py
src/catgpt/core/data/leela/: __init__.py  parser.py  utils.py
src/catgpt/core/evaluation/: __init__.py
src/catgpt/core/utils/: __init__.py  distributed.py  logging.py  policy.py  squares.py  tokenizer.py
src/catgpt/cpp/: __init__.py  uci_engine.py
src/catgpt/evaluation/: __init__.py  metrics.py
src/catgpt/jax/: __init__.py  configs.py
src/catgpt/jax/data/: __init__.py  dataloader.py
src/catgpt/jax/evaluation/: __init__.py  checkpoint.py  metrics.py
src/catgpt/jax/evaluation/benchmarks/: __init__.py  base.py  puzzles.py
src/catgpt/jax/evaluation/engines/: __init__.py  base.py  policy_engine.py  value_engine.py
src/catgpt/jax/models/: __init__.py  base.py  transformer.py
src/catgpt/jax/optimizers/: __init__.py  factory.py  splus.py
src/catgpt/jax/training/: __init__.py  trainer.py
src/catgpt/jax/utils/: __init__.py  hl_gauss.py
src/catgpt/models/: __init__.py  base.py
src/catgpt/optimizer/: __init__.py
src/catgpt/torch/: __init__.py
src/catgpt/torch/data/: __init__.py  dataloader.py  dataset.py
src/catgpt/torch/evaluation/: __init__.py  metrics.py
src/catgpt/torch/models/: __init__.py  base.py  transformer.py
src/catgpt/torch/optimizers/: __init__.py  factory.py  splus.py
src/catgpt/torch/training/: __init__.py  trainer.py
src/catgpt/tournament/: __init__.py  game_runner.py  openings.py  sprt.py
src/catgpt/training/: __init__.py  trainer.py
src/catgpt/utils/: __init__.py  config.py
tcec/: README.md  engines.json
tests/: __init__.py  conftest.py  test_chess.py  test_computer_use.py  test_core.py  test_data_consistency.py  test_evaluation.py  test_meta_features.py  test_models.py  test_tokenizer.py
web/: build.sh  docker-compose.yml  package-lock.json  package.json
web/drizzle/: 0000_clear_diamondback.sql
web/drizzle/meta/: 0000_snapshot.json  _journal.json
web/src/app/: layout.tsx  page.tsx
web/src/app/analyze/: page.tsx
web/src/app/api/positions/: route.ts
web/src/app/api/tournaments/: route.ts
web/src/app/longbench/: page.tsx
web/src/app/positions/: page.tsx
web/src/app/tournaments/: page.tsx
web/src/components/chess/: add-position-dialog.tsx  analysis-board.tsx  engine-analysis-panel.tsx  move-annotations.tsx  policy-chart.tsx
web/src/components/layout/: navbar.tsx
web/src/db/: index.ts  queries.ts  schema.ts
web/src/lib/: catgpt-engine.ts  chess-utils.ts  cutechess-runner.ts  cutechess.ts  longbench-runner.ts  longbench-score.ts  store.ts  types.ts  uci-engine.ts  use-engine-analysis.ts
(+27 files in other folders)
